// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`member banner layout builds Java-compatible member nodes 1`] = `
[
  {
    "assetKey": "MOONLIGHT_PURPLE",
    "height": 100,
    "type": "image",
    "width": 300,
    "x": 0,
    "y": 0,
  },
  {
    "assetKey": "DEFAULT_AUTHOR_LOGO",
    "height": 80,
    "type": "sprite",
    "width": 80,
    "x": 12,
    "y": 10,
  },
  {
    "align": "left",
    "color": {
      "a": 255,
      "b": 224,
      "g": 224,
      "r": 230,
    },
    "content": "DevUser",
    "fontFace": "source-sans-pro",
    "fontSize": 18,
    "fontWeight": "bold",
    "type": "text",
    "x": 104,
    "y": 22,
  },
  {
    "align": "left",
    "color": {
      "a": 255,
      "b": 224,
      "g": 224,
      "r": 230,
    },
    "content": "Rank: Supreme",
    "fontFace": "source-sans-pro",
    "fontSize": 14,
    "fontWeight": "regular",
    "type": "text",
    "x": 104,
    "y": 37,
  },
  {
    "align": "left",
    "color": {
      "a": 255,
      "b": 224,
      "g": 224,
      "r": 230,
    },
    "content": "Joined: 5/15/2024",
    "fontFace": "source-sans-pro",
    "fontSize": 14,
    "fontWeight": "regular",
    "type": "text",
    "x": 104,
    "y": 55,
  },
  {
    "align": "left",
    "color": {
      "a": 255,
      "b": 224,
      "g": 224,
      "r": 230,
    },
    "content": "Posts: 1.2K",
    "fontFace": "source-sans-pro",
    "fontSize": 14,
    "fontWeight": "regular",
    "type": "text",
    "x": 104,
    "y": 72,
  },
  {
    "align": "left",
    "color": {
      "a": 255,
      "b": 224,
      "g": 224,
      "r": 230,
    },
    "content": "Feedback: +35",
    "fontFace": "source-sans-pro",
    "fontSize": 14,
    "fontWeight": "regular",
    "type": "text",
    "x": 104,
    "y": 89,
  },
]
`;

exports[`team banner layout builds Java-compatible team nodes 1`] = `
[
  {
    "assetKey": "MOONLIGHT_PURPLE",
    "height": 100,
    "type": "image",
    "width": 300,
    "x": 0,
    "y": 0,
  },
  {
    "assetKey": "DEFAULT_POLYMART_RES_LOGO",
    "height": 80,
    "type": "sprite",
    "width": 80,
    "x": 12,
    "y": 10,
  },
  {
    "align": "left",
    "color": {
      "a": 255,
      "b": 224,
      "g": 224,
      "r": 230,
    },
    "content": "PluginTeam",
    "fontFace": "source-sans-pro",
    "fontSize": 18,
    "fontWeight": "bold",
    "type": "text",
    "x": 104,
    "y": 22,
  },
  {
    "align": "left",
    "color": {
      "a": 255,
      "b": 224,
      "g": 224,
      "r": 230,
    },
    "content": "12 resources",
    "fontFace": "source-sans-pro",
    "fontSize": 14,
    "fontWeight": "regular",
    "type": "text",
    "x": 104,
    "y": 38,
  },
  {
    "align": "left",
    "color": {
      "a": 255,
      "b": 224,
      "g": 224,
      "r": 230,
    },
    "content": "250K downloads",
    "fontFace": "source-sans-pro",
    "fontSize": 14,
    "fontWeight": "regular",
    "type": "text",
    "x": 104,
    "y": 72,
  },
  {
    "align": "left",
    "color": {
      "a": 255,
      "b": 224,
      "g": 224,
      "r": 230,
    },
    "content": "3.4K ratings",
    "fontFace": "source-sans-pro",
    "fontSize": 14,
    "fontWeight": "regular",
    "type": "text",
    "x": 104,
    "y": 89,
  },
]
`;
